fix vertical spacing in vertical tabs [UPDATE_SCREENSHOTS=true]

--- a/sass/components/vertical-tabs.scss
+++ b/sass/components/vertical-tabs.scss
@@ -1,1 +1,6 @@
 @import '@theme-seven/css/components/vertical-tabs.css';
+
+.vertical-tabs__menu-item-title,
+.vertical-tabs__menu-item-summary {
+  line-height: normal;
+}
